# PyEUPI

./: .gitignore  .travis.yml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: mypy.yml
doc/: Makefile
doc/source/: conf.py  index.rst  pyeupi.rst
docs/source/: conf.py  examples.rst  index.rst
pyeupi/: __init__.py  api.py
